[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-mem-python"
version = "1.0.0"
description = "Python SDK for Cortex CE — persistent memory system for AI assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]

[tool.setuptools.packages.find]
include = ["cortex_mem*"]
